--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  opus-1.1.tar.gz: 35005f5549e2583f5770590135984dcfce6f3d58
+  opus-1.1.1-beta.tar.gz: 7bd38f65496a3275a01f8b4864ab0ea2ea6b5247
