--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,3 @@
 sources:
   opus-1.1.1-beta.tar.gz: 7bd38f65496a3275a01f8b4864ab0ea2ea6b5247
+  opus-1.1.2.tar.gz: c8a8ada1f471bd3ab1e3f6bdfe7fc6549fa913e0
