--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  opus-1.1.3.tar.gz: 7cb1bef20975afbf14a8a43308aed9cb41629f37
+  opus-1.2-rc1.tar.gz: 0589e51d968c5dd25f00fdd90492584ceac93a24
