--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  opus-1.2-rc1.tar.gz: 0589e51d968c5dd25f00fdd90492584ceac93a24
+  opus-1.2.tar.gz: c255f083ecab5c84f4b81a3be667f304e45060df
